# ecoalign-forge

./: .env.example  .gitignore  Makefile  README.md  README_zh.md  guidelines.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py  data_loader.py
dashboard/components/: __init__.py  attack_chart.py  kpi_cards.py  pipeline_table.py  quality_chart.py  radar_chart.py  sidebar.py  theme.py  timeline_chart.py
docs/: demo_report.html
examples/: quickstart.py
examples/policies/: chinese_content_safety.json  social_media_community.json
src/ecoalign_forge/: __init__.py  __main__.py  _guidelines.py  config.py  exceptions.py
src/ecoalign_forge/agents/: base.py  chaos_creator.py  constitutional.py  moderator.py  supreme_judge.py
src/ecoalign_forge/demo/: __init__.py  fixtures.py
src/ecoalign_forge/engine/: adaptive_sampler.py  flywheel.py  orchestrator.py
src/ecoalign_forge/export/: __init__.py  sharegpt_format.py  trl_format.py
src/ecoalign_forge/llm/: client.py  prompts.py
src/ecoalign_forge/quality/: __init__.py  scorer.py
src/ecoalign_forge/reports/: __init__.py  html_report.py
src/ecoalign_forge/schemas/: __init__.py  chaos.py  dpo.py  judge.py  lineage.py  pipeline.py  policy.py
src/ecoalign_forge/storage/: __init__.py  agreement.py  dashboard_bridge.py  metrics.py  store.py
src/ecoalign_forge/taxonomy/: __init__.py  attack_registry.py  evol_strategies.py  harm_categories.py
tests/: conftest.py  test_agents.py  test_agreement.py  test_export.py  test_guidelines_loader.py  test_llm_client.py  test_metrics.py  test_orchestrator.py  test_parsing_retry.py  test_phase2.py  test_quality.py  test_schemas.py  test_storage.py
